Change to dual license: AGPL 3.0 & CC-BY 4.0
AGPL 3.0 is necessary due to the docusaurus-json-schema-plugin dependency
using an AGPL 3.0 license. This also adds in a recommended spell checker
VSCode plugin.

Signed-off-by: Jeremy Ho <jujaga@gmail.com>

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
     "eamodio.gitlens",
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
+    "streetsidesoftware.code-spell-checker",
     "unifiedjs.vscode-mdx"
   ]
 }
