--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.0.0",
     "docusaurus-json-schema-plugin": "^1.12.2",
     "docusaurus-lunr-search": "^3.5.0",
+    "mermaid": "^11.4.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
