Allow renovate to do PRs every Tuesday
Monthly windows may be too restrictive; a weekly cadence may be more
appropriate

Signed-off-by: Jeremy Ho <jujaga@gmail.com>

--- a/renovate.json
+++ b/renovate.json
@@ -26,7 +26,6 @@
     }
   ],
   "prConcurrentLimit": 2,
-  "pruneStaleBranches": false,
-  "schedule": ["before 4am on the first day of the month"],
+  "schedule": ["* * * * 2"],
   "timezone": "America/Los_Angeles"
 }
