Allow renovate to do prune stale branches
Signed-off-by: Jeremy Ho <jujaga@gmail.com>

--- a/renovate.json
+++ b/renovate.json
@@ -26,7 +26,7 @@
     }
   ],
   "prConcurrentLimit": 2,
-  "pruneStaleBranches": false,
+  "pruneStaleBranches": true,
   "schedule": ["before 4am on the first day of the month"],
   "timezone": "America/Los_Angeles"
 }
