--- a/package.json
+++ b/package.json
@@ -16,24 +16,24 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "^3.6.1",
-    "@docusaurus/faster": "^3.6.1",
-    "@docusaurus/preset-classic": "^3.6.1",
-    "@docusaurus/theme-mermaid": "^3.6.1",
-    "@mdx-js/react": "^3.1.0",
-    "clsx": "^2.0.0",
-    "docusaurus-json-schema-plugin": "^1.12.2",
-    "docusaurus-lunr-search": "^3.5.0",
-    "mermaid": "^11.4.0",
-    "prism-react-renderer": "^2.3.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "@docusaurus/core": "3.6.1",
+    "@docusaurus/faster": "3.6.1",
+    "@docusaurus/preset-classic": "3.6.1",
+    "@docusaurus/theme-mermaid": "3.6.1",
+    "@mdx-js/react": "3.1.0",
+    "clsx": "2.0.0",
+    "docusaurus-json-schema-plugin": "1.12.2",
+    "docusaurus-lunr-search": "3.5.0",
+    "mermaid": "11.4.0",
+    "prism-react-renderer": "2.3.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^3.6.1",
-    "@docusaurus/tsconfig": "^3.6.1",
-    "@docusaurus/types": "^3.6.1",
-    "typescript": "^5.6.3"
+    "@docusaurus/module-type-aliases": "3.6.1",
+    "@docusaurus/tsconfig": "3.6.1",
+    "@docusaurus/types": "3.6.1",
+    "typescript": "5.6.3"
   },
   "browserslist": {
     "production": [
