Lower Renovate minimumReleaseAge to 3 days and enable merge_group flow
72 hours is the minimum needed before a version is irrevokable from the
NPM registry.

Signed-off-by: Jeremy Ho <jujaga@gmail.com>

--- a/.github/workflows/on-pr.yaml
+++ b/.github/workflows/on-pr.yaml
@@ -1,6 +1,7 @@
 name: Deploy PR to Github Pages
 
 on:
+  merge_group:
   pull_request:
     branches:
       - main
@@ -44,6 +45,7 @@ jobs:
         run: npm run build
       - name: Deploy to/Cleanup GitHub Pages
         uses: rossjrw/pr-preview-action@v1
+        if: github.event_name != 'merge_group'
         with:
           source-dir: ./build
           preview-branch: gh-pages
