--- a/renovate.json
+++ b/renovate.json
@@ -6,6 +6,7 @@
   "lockFileMaintenance": {
     "enabled": false
   },
+  "minimumReleaseAge": "3 days",
   "prConcurrentLimit": 2,
   "pruneStaleBranches": true,
   "rangeStrategy": "pin",
