Reconfigure Renovate to generate Draft PRs
This adds an extra guard rail and conscious step required prior to merging

Signed-off-by: Jeremy Ho <jujaga@gmail.com>

--- a/renovate.json
+++ b/renovate.json
@@ -3,6 +3,7 @@
   "extends": ["local>bcgov/renovate-config"],
   "automerge": false,
   "dependencyDashboard": true,
+  "draftPR": true,
   "lockFileMaintenance": {
     "enabled": false
   },
