--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,9 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["local>bcgov/renovate-config"],
-  "automerge": false,
+  "automerge": true,
   "dependencyDashboard": true,
-  "draftPR": true,
+  "draftPR": false,
   "lockFileMaintenance": {
     "enabled": false
   },
