Implement version publishing utilities
We need to update the paths inside versioned documentation copies to make
sure all assets are properly resolvable. This script does this by making
all files that match a certain pattern get updated to the right format
and version. This must be done prior to doing a formal version release.

Signed-off-by: Jeremy Ho <jujaga@gmail.com>

--- a/.editorconfig
+++ b/.editorconfig
@@ -10,10 +10,10 @@ trim_trailing_whitespace = true
 indent_style = space
 indent_size = 2
 
-[*.{css,js,json,jsx,md,mdx,scss,ts,tsx,vue}]
+[*.{css,js,json,jsx,md,mdx,mts,scss,ts,tsx,vue}]
 indent_style = space
 indent_size = 2
 
-[.{babelrc,eslintrc}]
+[.{babelrc,eslintrc,prettierrc}]
 indent_style = space
 indent_size = 2
