Change renovate to use cron syntax instead
PRs are not being automatically generated for some reason. Hopefully this
can fix it.

Signed-off-by: Jeremy Ho <jujaga@gmail.com>

--- a/renovate.json
+++ b/renovate.json
@@ -6,12 +6,12 @@
   "draftPR": false,
   "lockFileMaintenance": {
     "enabled": true,
-    "schedule": ["before 4am on tuesday"]
+    "schedule": ["* 0-4,22-23 * * 2"]
   },
   "minimumReleaseAge": "3 days",
   "prConcurrentLimit": 2,
   "pruneStaleBranches": true,
   "rangeStrategy": "pin",
-  "schedule": ["before 4am on tuesday"],
+  "schedule": ["* 0-4,22-23 * * 2"],
   "timezone": "America/Vancouver"
 }
