--- a/renovate.json
+++ b/renovate.json
@@ -6,12 +6,12 @@
   "draftPR": false,
   "lockFileMaintenance": {
     "enabled": true,
-    "schedule": ["* 0-4,22-23 * * 2"]
+    "schedule": ["* 0-4 * * 2"]
   },
   "minimumReleaseAge": "3 days",
   "prConcurrentLimit": 2,
   "pruneStaleBranches": true,
   "rangeStrategy": "pin",
-  "schedule": ["* 0-4,22-23 * * 2"],
+  "schedule": ["* 0-4,20-23 * * 1-5"],
   "timezone": "America/Vancouver"
 }
