Add Dev Containers suppoort
Since containers need to listen to all traffic and not just localhost, we
need to add the --host 0.0.0.0 argument to ensure it is not ignoring
traffic that comes in via port forwarding.

Signed-off-by: Jeremy Ho <jujaga@gmail.com>

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,7 @@
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
     "gruntfuggly.todo-tree",
+    "ms-azuretools.vscode-docker",
     "streetsidesoftware.code-spell-checker",
     "unifiedjs.vscode-mdx",
     "usernamehw.errorlens"
