--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
       "request": "launch",
       "name": "Launch",
       "program": "${workspaceFolder}/node_modules/.bin/docusaurus",
-      "args": ["start"],
+      "args": ["start", "--host", "0.0.0.0"],
       "skipFiles": [
         "<node_internals>/**",
         "${workspaceFolder}/node_modules/**"
