--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "format": "prettier --write \"**/*.{css,json,md,mdx,ts,tsx,yaml}\"",
-    "start": "docusaurus start",
+    "start": "docusaurus start --host 0.0.0.0",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
