--- a/.github/workflows/on-pr.yaml
+++ b/.github/workflows/on-pr.yaml
@@ -26,11 +26,11 @@ jobs:
       pull-requests: write
     steps:
       - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
+        uses: actions/checkout@v4.2.2
         with:
           fetch-depth: 0
       - name: Use Node
-        uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4
+        uses: actions/setup-node@v4.4.0
         if: github.event.action != 'closed'
         with:
           node-version: 22
@@ -44,7 +44,7 @@ jobs:
           BASE_URL: /nr-pies/pr-preview/pr-${{ github.event.pull_request.number }}
         run: npm run build
       - name: Deploy to/Cleanup GitHub Pages
-        uses: rossjrw/pr-preview-action@2fb559e4766555e23d07b73d313fe97c4f8c3cfe # v1
+        uses: rossjrw/pr-preview-action@v1.6.1
         if: github.event_name != 'merge_group'
         with:
           source-dir: ./build
