--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,10 +7,7 @@
       "name": "Launch",
       "program": "${workspaceFolder}/node_modules/.bin/docusaurus",
       "args": ["start", "--host", "0.0.0.0"],
-      "skipFiles": [
-        "<node_internals>/**",
-        "${workspaceFolder}/node_modules/**"
-      ],
+      "skipFiles": ["<node_internals>/**", "${workspaceFolder}/node_modules/**"],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen"
     }
