fix: correct phrasing in product description and tagline to "easy-as-pie"
Signed-off-by: Jeremy Ho <jujaga@gmail.com>

--- a/bcgovpubcode.yml
+++ b/bcgovpubcode.yml
@@ -15,7 +15,7 @@ product_information:
   ministry:
     - Water, Land and Resource Stewardship
   product_acronym: PIES
-  product_description: An easy as pie way to exchange standardized permitting information.
+  product_description: An easy-as-pie way to exchange standardized permitting information.
   product_name: Permitting Interoperability Exchange Specification
   product_status: maturing
   product_urls:
